Add contact phone and WhatsApp integration

--- a/index.html
+++ b/index.html
@@ -236,9 +236,10 @@
     </section>
 
     <!-- Floating Booking Button -->
-    <button class="fab">
+    <a href="https://wa.me/5561995181500?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20a%20reserva%20no%20Chalé%20Casa%20Dourada."
+        target="_blank" class="fab">
         Reservar Agora
-    </button>
+    </a>
 
     <!-- Rodapé -->
     <footer>
@@ -248,7 +249,9 @@
                 <p>O refúgio perfeito nas montanhas. Onde o amor e a natureza se encontram.</p>
             </div>
             <div class="footer-contact">
-                <a href="#hero" class="book-now-btn">Reservar Agora</a>
+                <p class="footer-phone">Contato: (61) 99518-1500</p>
+                <a href="https://wa.me/5561995181500?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20a%20reserva%20no%20Chalé%20Casa%20Dourada."
+                    target="_blank" class="book-now-btn">Reservar Agora</a>
             </div>
         </div>
         <div class="footer-bottom">
