Fix: Mobile layout tweaks, reduce hero-content size and add scroll-toggle for FAB

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <!-- Floating Booking Button -->
     <a href="https://wa.me/5561995181500?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20a%20reserva%20no%20Chalé%20Casa%20Dourada."
-        target="_blank" class="fab">
+        target="_blank" class="fab hidden">
         Reservar Agora
     </a>
 
