feat: select exclusive photos for different sections

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
             </div>
             <div class="about-images reveal">
                 <!-- Using downloaded images -->
-                <img src="assets/image1.jpg" alt="Vista do Chalé Casa Dourada" class="img-main">
-                <img src="assets/image2.jpg" alt="Detalhe aconchegante do Chalé" class="img-secondary">
+                <img src="assets/WhatsApp Image 2026-02-20 at 17.11.22.jpeg" alt="Vista do Chalé Casa Dourada"
+                    class="img-main">
+                <img src="assets/WhatsApp Image 2026-02-20 at 17.11.21.jpeg" alt="Detalhe aconchegante do Chalé"
+                    class="img-secondary">
             </div>
         </div>
     </section>
@@ -117,7 +119,7 @@
             <div class="exp-cards-grid">
                 <div class="exp-card reveal">
                     <div class="exp-card-img">
-                        <img src="assets/image3.jpg" alt="Hidromassagem e conforto">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.23.jpeg" alt="Hidromassagem e conforto">
                     </div>
                     <div class="exp-card-body">
                         <h3>Fortaleça a Intimidade</h3>
@@ -128,7 +130,8 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.15s;">
                     <div class="exp-card-img">
-                        <img src="assets/image4.jpg" alt="Churrasqueira e pôr do sol">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (1).jpeg"
+                            alt="Churrasqueira e pôr do sol">
                     </div>
                     <div class="exp-card-body">
                         <h3>Romantismo que Reacende</h3>
@@ -139,7 +142,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.3s;">
                     <div class="exp-card-img">
-                        <img src="assets/image1.jpg" alt="Vista do chalé">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (2).jpeg" alt="Vista e natureza">
                     </div>
                     <div class="exp-card-body">
                         <h3>Conexão com a Natureza</h3>
@@ -152,31 +155,19 @@
             <!-- Gallery Mosaic -->
             <div class="gallery-grid">
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image1.jpg" alt="Vista externa">
-                </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/image5.jpg" alt="Noite no chalé">
-                </div>
-                <div class="gallery-item tall reveal">
-                    <img src="assets/image3.jpg" alt="Hidromassagem">
-                </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/image6.jpg" alt="Café da manhã">
-                </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/image7.jpg" alt="Decoração">
-                </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/image11.jpg" alt="Vista lateral">
+                    <img src="assets/image8.jpg" alt="Ambiente do chalé">
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image8.jpg" alt="Pátio">
+                    <img src="assets/image11.jpg" alt="Ambiente do chalé">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/image9.jpg" alt="Entardecer">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/image10.jpg" alt="Varanda">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15.jpeg" alt="Ambiente do chalé">
+                </div>
+                <div class="gallery-item wide reveal">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34.jpeg" alt="Ambiente do chalé">
                 </div>
             </div>
         </div>
