revert: restore original experience section images

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="exp-cards-grid">
                 <div class="exp-card reveal">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.23.jpeg" alt="Hidromassagem e conforto">
+                        <img src="assets/image3.jpg" alt="Hidromassagem e conforto">
                     </div>
                     <div class="exp-card-body">
                         <h3>Fortaleça a Intimidade</h3>
@@ -130,8 +130,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.15s;">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (1).jpeg"
-                            alt="Churrasqueira e pôr do sol">
+                        <img src="assets/image4.jpg" alt="Churrasqueira e pôr do sol">
                     </div>
                     <div class="exp-card-body">
                         <h3>Romantismo que Reacende</h3>
@@ -142,7 +141,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.3s;">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (2).jpeg" alt="Vista e natureza">
+                        <img src="assets/image5.jpg" alt="Vista e natureza">
                     </div>
                     <div class="exp-card-body">
                         <h3>Conexão com a Natureza</h3>
