feat: add lightbox to gallery images

--- a/index.html
+++ b/index.html
@@ -154,19 +154,22 @@
             <!-- Gallery Mosaic -->
             <div class="gallery-grid">
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image8.jpg" alt="Ambiente do chalé">
+                    <img src="assets/image8.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image11.jpg" alt="Ambiente do chalé">
+                    <img src="assets/image11.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé"
+                        class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15.jpeg" alt="Ambiente do chalé">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15.jpeg" alt="Ambiente do chalé"
+                        class="lightbox-trigger">
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34.jpeg" alt="Ambiente do chalé">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34.jpeg" alt="Ambiente do chalé"
+                        class="lightbox-trigger">
                 </div>
             </div>
         </div>
@@ -248,6 +251,12 @@
             <p>&copy; 2026 Chalé Casa Dourada. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- Lightbox Modal -->
+    <div id="lightbox" class="lightbox-overlay">
+        <button class="lightbox-close" id="lightbox-close">&#x2715;</button>
+        <img id="lightbox-img" src="" alt="Foto ampliada">
+    </div>
 
     <!-- Scripts -->
     <script src="main.js"></script>
