--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="exp-cards-grid">
                 <div class="exp-card reveal">
                     <div class="exp-card-img">
-                        <img src="assets/image3.jpg" alt="Hidromassagem e conforto">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15 (1).jpeg" alt="Hidromassagem e conforto">
                     </div>
                     <div class="exp-card-body">
                         <h3>Fortaleça a Intimidade</h3>
@@ -130,7 +130,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.15s;">
                     <div class="exp-card-img">
-                        <img src="assets/image4.jpg" alt="Churrasqueira e pôr do sol">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.23.jpeg" alt="Churrasqueira e pôr do sol">
                     </div>
                     <div class="exp-card-body">
                         <h3>Romantismo que Reacende</h3>
@@ -141,7 +141,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.3s;">
                     <div class="exp-card-img">
-                        <img src="assets/image5.jpg" alt="Vista e natureza">
+                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (4).jpeg" alt="Vista e natureza">
                     </div>
                     <div class="exp-card-body">
                         <h3>Conexão com a Natureza</h3>
@@ -154,10 +154,10 @@
             <!-- Gallery Mosaic -->
             <div class="gallery-grid">
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image8.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.08 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="assets/image11.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.31.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
                     <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé"
@@ -170,6 +170,37 @@
                 <div class="gallery-item wide reveal">
                     <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34.jpeg" alt="Ambiente do chalé"
                         class="lightbox-trigger">
+                </div>
+                <!-- New Images -->
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.39 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.39.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.40 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.40.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (2).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (3).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.42 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal">
+                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.42.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
             </div>
         </div>
