chore: simplificar nomes de fotos novas e limpar duplicatas

--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
             <!-- Gallery Mosaic -->
             <div class="gallery-grid">
                 <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.08 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.08 (1).jpeg" alt="Ambiente do chalé"
+                        class="lightbox-trigger">
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.31.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.31.jpeg" alt="Ambiente do chalé"
+                        class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
                     <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé"
@@ -173,34 +175,34 @@
                 </div>
                 <!-- New Images -->
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.39 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra1.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.39.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra2.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.40 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra3.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.40.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra4.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra5.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (2).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra6.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41 (3).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra7.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.41.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra8.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.42 (1).jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra9.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-21 at 14.11.42.jpeg" alt="Ambiente do chalé" class="lightbox-trigger">
+                    <img src="assets/extra10.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
                 </div>
             </div>
         </div>
