--- a/index.html
+++ b/index.html
@@ -153,56 +153,108 @@
 
             <!-- Gallery Mosaic -->
             <div class="gallery-grid">
+                <!-- Mostra de Vídeos (v1-v9) -->
                 <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.08 (1).jpeg" alt="Ambiente do chalé"
-                        class="lightbox-trigger">
-                </div>
-                <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.31.jpeg" alt="Ambiente do chalé"
-                        class="lightbox-trigger">
+                    <video autoplay loop muted playsinline class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:cover;">
+                        <source src="assets/v4.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.14.jpeg" alt="Ambiente do chalé"
-                        class="lightbox-trigger">
+                    <video autoplay loop muted playsinline class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:cover;">
+                        <source src="assets/v8.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15.jpeg" alt="Ambiente do chalé"
-                        class="lightbox-trigger">
+                    <video autoplay loop muted playsinline class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:cover;">
+                        <source src="assets/v9.mp4" type="video/mp4">
+                    </video>
                 </div>
-                <div class="gallery-item wide reveal">
-                    <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34.jpeg" alt="Ambiente do chalé"
-                        class="lightbox-trigger">
+
+                <!-- Lote de Fotos (p1 - p40) -->
+                <div class="gallery-item reveal"><img src="assets/p1.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <!-- New Images -->
-                <div class="gallery-item reveal">
-                    <img src="assets/extra1.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item tall reveal"><img src="assets/p11.jpg" alt="Foto do Chalé"
+                        class="lightbox-trigger"></div>
+                <div class="gallery-item reveal"><img src="assets/p2.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra2.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p3.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra3.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item wide reveal"><img src="assets/p27.jpg" alt="Foto do Chalé"
+                        class="lightbox-trigger"></div>
+                <div class="gallery-item reveal"><img src="assets/p4.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra4.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p5.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra5.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p6.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra6.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p7.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra7.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item tall reveal"><img src="assets/p29.jpg" alt="Foto do Chalé"
+                        class="lightbox-trigger"></div>
+                <div class="gallery-item reveal"><img src="assets/p8.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra8.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p9.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra9.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal"><img src="assets/p10.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal">
-                    <img src="assets/extra10.jpg" alt="Ambiente do chalé" class="lightbox-trigger">
+                <div class="gallery-item wide reveal"><img src="assets/p12.jpg" alt="Foto do Chalé"
+                        class="lightbox-trigger"></div>
+                <div class="gallery-item reveal"><img src="assets/p13.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p14.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/v5.mp4" type="video/mp4" class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:cover;"></div>
+                <div class="gallery-item reveal"><img src="assets/p15.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p16.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p17.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p18.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p19.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p20.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p21.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p22.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p23.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p24.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p25.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p26.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p28.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p30.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p31.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p32.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p33.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p34.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p35.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p36.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p37.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p38.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p39.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                </div>
+                <div class="gallery-item reveal"><img src="assets/p40.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
             </div>
         </div>
