fix: corrigir tag de vídeo na galeria e preencher buracos

--- a/index.html
+++ b/index.html
@@ -206,8 +206,12 @@
                 </div>
                 <div class="gallery-item reveal"><img src="assets/p14.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
-                <div class="gallery-item reveal"><img src="assets/v5.mp4" type="video/mp4" class="lightbox-trigger"
-                        style="width:100%; height:100%; object-fit:cover;"></div>
+                <div class="gallery-item reveal">
+                    <video autoplay loop muted playsinline class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:cover;">
+                        <source src="assets/v5.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="gallery-item reveal"><img src="assets/p15.jpg" alt="Foto do Chalé" class="lightbox-trigger">
                 </div>
                 <div class="gallery-item reveal"><img src="assets/p16.jpg" alt="Foto do Chalé" class="lightbox-trigger">
