fix: galeria sem buracos, lightbox premium com suporte real a video e setas elegantes

--- a/index.html
+++ b/index.html
@@ -151,104 +151,179 @@
                 </div>
             </div>
 
-            <!-- Gallery Mosaic -->
+            <!-- Gallery Grid -->
             <div class="gallery-grid">
-                <!-- Mostra de Vídeos (v1-v9) -->
-                <div class="gallery-item wide reveal">
-                    <video autoplay loop muted playsinline class="lightbox-trigger"
-                        style="width:100%; height:100%; object-fit:cover;">
+
+                <!-- Videos (clicáveis) -->
+                <div class="gallery-item gallery-wide reveal" data-index="0" data-type="video" data-src="assets/v4.mp4">
+                    <video autoplay loop muted playsinline>
                         <source src="assets/v4.mp4" type="video/mp4">
                     </video>
+                    <div class="gallery-play-icon">&#9654;</div>
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal">
-                    <video autoplay loop muted playsinline class="lightbox-trigger"
-                        style="width:100%; height:100%; object-fit:cover;">
+                <div class="gallery-item reveal" data-index="1" data-type="video" data-src="assets/v8.mp4">
+                    <video autoplay loop muted playsinline>
                         <source src="assets/v8.mp4" type="video/mp4">
                     </video>
+                    <div class="gallery-play-icon">&#9654;</div>
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal">
-                    <video autoplay loop muted playsinline class="lightbox-trigger"
-                        style="width:100%; height:100%; object-fit:cover;">
-                        <source src="assets/v9.mp4" type="video/mp4">
-                    </video>
-                </div>
-
-                <!-- Lote de Fotos (p1 - p40) -->
-                <div class="gallery-item reveal"><img src="assets/p1.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item tall reveal"><img src="assets/p11.jpg" alt="Foto do Chalé"
-                        class="lightbox-trigger"></div>
-                <div class="gallery-item reveal"><img src="assets/p2.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p3.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item wide reveal"><img src="assets/p27.jpg" alt="Foto do Chalé"
-                        class="lightbox-trigger"></div>
-                <div class="gallery-item reveal"><img src="assets/p4.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p5.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p6.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p7.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p8.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p9.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p10.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item wide reveal"><img src="assets/p12.jpg" alt="Foto do Chalé"
-                        class="lightbox-trigger"></div>
-                <div class="gallery-item reveal"><img src="assets/p13.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal"><img src="assets/p14.jpg" alt="Foto do Chalé" class="lightbox-trigger">
-                </div>
-                <div class="gallery-item reveal">
-                    <video autoplay loop muted playsinline class="lightbox-trigger"
-                        style="width:100%; height:100%; object-fit:cover;">
+                <div class="gallery-item reveal" data-index="2" data-type="video" data-src="assets/v5.mp4">
+                    <video autoplay loop muted playsinline>
                         <source src="assets/v5.mp4" type="video/mp4">
                     </video>
+                    <div class="gallery-play-icon">&#9654;</div>
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p15.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+
+                <!-- Fotos -->
+                <div class="gallery-item reveal" data-index="3" data-type="image" data-src="assets/p1.jpg"><img
+                        src="assets/p1.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p16.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="4" data-type="image" data-src="assets/p2.jpg"><img
+                        src="assets/p2.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p17.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item gallery-wide reveal" data-index="5" data-type="image"
+                    data-src="assets/p27.jpg"><img src="assets/p27.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p18.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="6" data-type="image" data-src="assets/p3.jpg"><img
+                        src="assets/p3.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p19.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="7" data-type="image" data-src="assets/p4.jpg"><img
+                        src="assets/p4.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p20.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="8" data-type="image" data-src="assets/p5.jpg"><img
+                        src="assets/p5.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p21.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="9" data-type="image" data-src="assets/p6.jpg"><img
+                        src="assets/p6.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p22.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="10" data-type="image" data-src="assets/p7.jpg"><img
+                        src="assets/p7.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p25.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="11" data-type="image" data-src="assets/p8.jpg"><img
+                        src="assets/p8.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p26.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item gallery-wide reveal" data-index="12" data-type="image"
+                    data-src="assets/p11.jpg"><img src="assets/p11.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p28.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="13" data-type="image" data-src="assets/p9.jpg"><img
+                        src="assets/p9.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p31.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="14" data-type="image" data-src="assets/p10.jpg"><img
+                        src="assets/p10.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p32.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item gallery-wide reveal" data-index="15" data-type="image"
+                    data-src="assets/p12.jpg"><img src="assets/p12.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p34.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="16" data-type="image" data-src="assets/p13.jpg"><img
+                        src="assets/p13.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p35.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="17" data-type="image" data-src="assets/p14.jpg"><img
+                        src="assets/p14.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p36.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="18" data-type="video" data-src="assets/v9.mp4">
+                    <video autoplay loop muted playsinline>
+                        <source src="assets/v9.mp4" type="video/mp4">
+                    </video>
+                    <div class="gallery-play-icon">&#9654;</div>
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p37.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="19" data-type="image" data-src="assets/p15.jpg"><img
+                        src="assets/p15.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p38.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="20" data-type="image" data-src="assets/p16.jpg"><img
+                        src="assets/p16.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p39.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="21" data-type="image" data-src="assets/p17.jpg"><img
+                        src="assets/p17.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
-                <div class="gallery-item reveal"><img src="assets/p40.jpg" alt="Foto do Chalé" class="lightbox-trigger">
+                <div class="gallery-item reveal" data-index="22" data-type="image" data-src="assets/p18.jpg"><img
+                        src="assets/p18.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="23" data-type="image" data-src="assets/p19.jpg"><img
+                        src="assets/p19.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="24" data-type="image" data-src="assets/p20.jpg"><img
+                        src="assets/p20.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="25" data-type="image" data-src="assets/p21.jpg"><img
+                        src="assets/p21.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="26" data-type="image" data-src="assets/p22.jpg"><img
+                        src="assets/p22.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="27" data-type="image" data-src="assets/p25.jpg"><img
+                        src="assets/p25.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="28" data-type="image" data-src="assets/p26.jpg"><img
+                        src="assets/p26.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="29" data-type="image" data-src="assets/p28.jpg"><img
+                        src="assets/p28.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="30" data-type="image" data-src="assets/p31.jpg"><img
+                        src="assets/p31.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="31" data-type="image" data-src="assets/p32.jpg"><img
+                        src="assets/p32.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="32" data-type="image" data-src="assets/p34.jpg"><img
+                        src="assets/p34.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="33" data-type="image" data-src="assets/p35.jpg"><img
+                        src="assets/p35.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="34" data-type="image" data-src="assets/p36.jpg"><img
+                        src="assets/p36.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="35" data-type="image" data-src="assets/p37.jpg"><img
+                        src="assets/p37.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="36" data-type="image" data-src="assets/p38.jpg"><img
+                        src="assets/p38.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="37" data-type="image" data-src="assets/p39.jpg"><img
+                        src="assets/p39.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-item reveal" data-index="38" data-type="image" data-src="assets/p40.jpg"><img
+                        src="assets/p40.jpg" alt="Chalé">
+                    <div class="gallery-overlay"></div>
                 </div>
             </div>
         </div>
@@ -332,15 +407,32 @@
     </footer>
 
     <!-- Lightbox Modal -->
-    <div id="lightbox" class="lightbox-overlay">
-        <button class="lightbox-close" id="lightbox-close">&#x2715;</button>
-        <button class="lightbox-prev" id="lightbox-prev">&#10094;</button>
-        <button class="lightbox-next" id="lightbox-next">&#10095;</button>
-        <div class="lightbox-content">
-            <img id="lightbox-img" src="" alt="Foto ampliada">
-            <video id="lightbox-video" controls autoplay loop playsinline
-                style="display:none; max-width:100%; max-height:90vh;"></video>
+    <div id="lightbox" class="lightbox-overlay" role="dialog" aria-modal="true">
+        <div class="lb-backdrop"></div>
+        <button class="lb-close" id="lightbox-close" aria-label="Fechar">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <line x1="18" y1="6" x2="6" y2="18" />
+                <line x1="6" y1="6" x2="18" y2="18" />
+            </svg>
+        </button>
+        <button class="lb-nav lb-prev" id="lightbox-prev" aria-label="Anterior">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <polyline points="15 18 9 12 15 6" />
+            </svg>
+        </button>
+        <button class="lb-nav lb-next" id="lightbox-next" aria-label="Próximo">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <polyline points="9 18 15 12 9 6" />
+            </svg>
+        </button>
+        <div class="lb-media-wrap">
+            <img id="lightbox-img" src="" alt="" class="lb-media">
+            <video id="lightbox-video" class="lb-media" controls playsinline style="display:none;"></video>
         </div>
+        <div class="lb-counter" id="lb-counter"></div>
     </div>
 
     <!-- Scripts -->
