fix: corrigir caminhos de imagens com espacos no nome

--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
             </div>
             <div class="about-images reveal">
                 <!-- Using downloaded images -->
-                <img src="assets/WhatsApp Image 2026-02-20 at 17.11.22.jpeg" alt="Vista do Chalé Casa Dourada"
-                    class="img-main">
-                <img src="assets/WhatsApp Image 2026-02-20 at 17.11.21.jpeg" alt="Detalhe aconchegante do Chalé"
-                    class="img-secondary">
+                <img src="assets/p28.jpg" alt="Vista do Chalé Casa Dourada" class="img-main">
+                <img src="assets/p26.jpg" alt="Detalhe aconchegante do Chalé" class="img-secondary">
             </div>
         </div>
     </section>
@@ -119,7 +117,7 @@
             <div class="exp-cards-grid">
                 <div class="exp-card reveal">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.15 (1).jpeg" alt="Hidromassagem e conforto">
+                        <img src="assets/p6.jpg" alt="Hidromassagem e conforto">
                     </div>
                     <div class="exp-card-body">
                         <h3>Fortaleça a Intimidade</h3>
@@ -130,7 +128,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.15s;">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.23.jpeg" alt="Churrasqueira e pôr do sol">
+                        <img src="assets/p9.jpg" alt="Churrasqueira e pôr do sol">
                     </div>
                     <div class="exp-card-body">
                         <h3>Romantismo que Reacende</h3>
@@ -141,7 +139,7 @@
 
                 <div class="exp-card reveal" style="transition-delay: 0.3s;">
                     <div class="exp-card-img">
-                        <img src="assets/WhatsApp Image 2026-02-20 at 17.08.34 (4).jpeg" alt="Vista e natureza">
+                        <img src="assets/p22.jpg" alt="Vista e natureza">
                     </div>
                     <div class="exp-card-body">
                         <h3>Conexão com a Natureza</h3>
